--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,13 +34,15 @@
             "prefix": "app",
             "style": "camelCase"
           }
-        ]
+        ]        
       }
     },
     {
       "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
-      "rules": {}
+      "rules": {
+        "@angular-eslint/template/no-negated-async": "off"
+      }
     }
   ]
 }
