--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
     "@capacitor/cli": "4.6.1",
-    "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^12.11.1",
