script to deploy without storage rules update

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint --fix"
+    "lint": "ng lint --fix",
+    "hosting": "firebase deploy --only hosting"
   },
   "private": true,
   "dependencies": {
