add device detection

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/effects": "^15.1.0",
     "@ngrx/store": "^15.1.0",
     "@ngrx/store-devtools": "^15.1.0",
+    "angular-device-information": "^4.0.0",
     "angular-ng-autocomplete": "^2.0.12",
     "firebase": "^9.16.0",
     "ionicons": "^6.0.3",
