--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@awesome-cordova-plugins/screen-orientation": "^6.6.0",
-    "@capacitor/android": "4.6.1",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.6.1",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/keyboard": "4.1.0",
-    "@capacitor/status-bar": "4.1.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.0.10",
     "@ngrx/effects": "^15.1.0",
     "@ngrx/store": "^15.1.0",
@@ -52,7 +52,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.6.1",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/lodash": "^4.14.191",
