--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
     "@awesome-cordova-plugins/screen-orientation": "^6.6.0",
-    "@capacitor/android": "^5.0.0",
-    "@capacitor/app": "^5.0.0",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/haptics": "^5.0.0",
-    "@capacitor/keyboard": "^5.0.0",
-    "@capacitor/status-bar": "^5.0.0",
+    "@bcyesil/capacitor-plugin-printer": "^0.0.5",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^8.4.3",
     "@ngrx/effects": "^16.3.0",
     "@ngrx/store": "^16.3.0",
@@ -52,7 +53,7 @@
     "@angular/compiler": "^16.2.12",
     "@angular/compiler-cli": "^16.2.12",
     "@angular/language-service": "^16.2.12",
-    "@capacitor/cli": "^5.0.0",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/lodash": "^4.14.191",
